--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         </a>
       </div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus magna diam, quis congue enim sagittis rutrum. Curabitur id enim sagittis, lobortis tortor vitae, porta nulla. Donec cursus fermentum est. Donec quis ligula eleifend, accumsan felis sed, vehicula mi. Phasellus suscipit bibendum risus ut convallis. Praesent at maximus eros, non interdum dolor. Donec sit amet turpis quis augue venenatis commodo a eu nulla. Duis id vulputate nisl, in dictum purus. Integer sollicitudin vel justo vitae sagittis.</p>
-      <nav>
+      <nav class="navlinks">
         <ul>
           {{ macro.navlinks(TEXT) }}
         </ul>
