--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
           {{ macro.navlinks(TEXT) }}
         </ul>
       </nav>
+      {% include 'app/templates/includes/rotating_ad.html' %}
+      {% include 'app/templates/includes/rotating_ad_mobile.html' %}
     </section>
 
     <section class="video-container prose">
