--- a/app/index.html
+++ b/app/index.html
@@ -7,18 +7,18 @@
   <div class="main">
     <section class="series-intro prose">
       <div class="row share-row">
-        <a href="https://twitter.com/intent/tweet?text={{ sheet.tweet_text | urlencode }} {{ sheet.share_url_tw | urlencode }}&via=texastribune" title="share on Twitter" class="social-share" target="_blank">
+        <a href="https://twitter.com/intent/tweet?text={{ META[0]["twitter_text"] | urlencode }}http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F" title="share on Twitter" class="social-share" target="_blank">
           <div class="share-cell first-share">
             <i class="fa fa-twitter"></i> Tweet
           </div>
         </a>
-        <a href="https://www.facebook.com/dialog/share?app_id=154122474650943&display=popup&href={{ sheet.share_url_fb | urlencode }}&redirect_uri=http%3A%2F%2Fapps.texastribune.org/perry-legacy/{{ sheet.slug }}" title="share on Facebook" class="social-share" target="_blank">
+        <a href="https://www.facebook.com/dialog/share?app_id=154122474650943&display=popup&href=http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F&redirect_uri=http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F" title="share on Facebook" class="social-share" target="_blank">
           <div class="share-cell">
             <i class="fa fa-facebook"></i> Share
           </div>
         </a>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus magna diam, quis congue enim sagittis rutrum. Curabitur id enim sagittis, lobortis tortor vitae, porta nulla. Donec cursus fermentum est. Donec quis ligula eleifend, accumsan felis sed, vehicula mi. Phasellus suscipit bibendum risus ut convallis.</p>
+      <p>{{ META[0]["Intro_Graph"] }}</p>
       <h3>Use the links to navigate to stories below:</h3>
       <nav class="navlinks">
         <ul>
