fix facebook share button

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
             <i class="fa fa-twitter"></i> Tweet
           </div>
         </a>
-        <a href="https://www.facebook.com/dialog/share?app_id=154122474650943&display=popup&href=http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F&redirect_uri=http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F" title="share on Facebook" class="social-share" target="_blank">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fapps.texastribune.org%2Fstate-of-mind%2F" title="share on Facebook" class="social-share" target="_blank">
           <div class="share-cell">
             <i class="fa fa-facebook"></i> Share
           </div>
